--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
   "dependencies": {
     "@sanity/block-tools": "^1.149.4",
     "@sanity/schema": "^0.147.6",
-    "@sanity/slate-react": "0.58.4-rc2.0",
+    "@sanity/slate-react": "0.58.6",
     "debug": "^4.1.1",
     "get-random-values": "^1.2.0",
     "is-hotkey": "^0.1.6",
     "lodash": "^4.17.15",
-    "slate": "^0.58.1",
+    "slate": "^0.58.4",
     "styled-components": "^5.0.0",
     "typescript-plugin-styled-components": "^1.4.4"
   },
