--- a/package.json
+++ b/package.json
@@ -39,16 +39,13 @@
     "access": "public"
   },
   "dependencies": {
-    "@sanity/block-tools": "^1.149.4",
-    "@sanity/schema": "^0.147.6",
     "@sanity/slate-react": "0.58.6",
     "debug": "^4.1.1",
     "get-random-values": "^1.2.0",
     "is-hotkey": "^0.1.6",
     "lodash": "^4.17.15",
     "slate": "^0.58.4",
-    "styled-components": "^5.0.0",
-    "typescript-plugin-styled-components": "^1.4.4"
+    "styled-components": "^5.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.4",
@@ -63,6 +60,8 @@
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.7.0",
     "@types/react": "^16.9.19",
+    "@sanity/block-tools": "^1.150.3",
+    "@sanity/schema": "^1.150.3",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "babel-eslint": "^10.0.3",
@@ -90,9 +89,12 @@
     "ttypescript": "^1.5.10",
     "typedoc": "^0.17.3",
     "typescript": "^3.7.3",
-    "typescript-plugin-css-modules": "^2.1.2"
+    "typescript-plugin-css-modules": "^2.1.2",
+    "typescript-plugin-styled-components": "^1.4.4"
   },
   "peerDependencies": {
+    "@sanity/block-tools": "^1.150.3",
+    "@sanity/schema": "^1.150.3",
     "react": ">=16.8.0",
     "rxjs": ">=6.5.3"
   },
