--- a/package.json
+++ b/package.json
@@ -87,6 +87,9 @@
     "rimraf": "^2.7.1",
     "rxjs": "^6.5.3",
     "ts-jest": "^26.3.0",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^9.0.0",
     "ttypescript": "^1.5.10",
     "typedoc": "^0.17.3",
     "typescript": "^3.7.3",
